# dashfinance

./: .gitignore  ACOES_FINAIS.md  ARQUIVOS_GERADOS_HOJE.txt  ATIVAR_TOKENS_GRUPO_VOLPE.md  ATIVAR_WORKFLOWS_MANUAL.md  AUDITORIA_SENIOR_OCR_IA.md  AUTH_IMPLEMENTATION_GUIDE.md  AUTOMACOES_COMPLETAS_WHATSAPP_N8N.md  AUTOMACOES_ESTRATEGICAS_BPO.md  BILLING_SYSTEM.md  CHANGELOG.md  CHATGPT5_ATIVO.md  CHAVE_F360_INCORRETA.md  CHECKLIST_DEPLOY_FINAL.md  CHECKLIST_PRE_DEPLOY.md  CHECKLIST_VALIDACAO.md  CLIENTES_F360_com_TOKEN.csv  CLIENTES_F360_com_TOKEN.xlsx  CLIENTES_TOKENS_ONBOARDING_CRIADOS.md  CODEX_IMPLEMENTAR_RELATORIO_EXECUTIVO.md  COMANDOS_PROXIMA_SESSAO.sh  COMANDOS_RAPIDOS_TESTE.sh  COMECE_AQUI_FASE1.md  COMECE_AQUI_PARALELO.md  COMO_GERAR_PDF.md  CONCLUSAO_SESSAO_10NOV.md  CONFIGURAR_WEBHOOK_WASENDER.md  CORRIGIR_CERTIFICADOS.sh  CORRIGIR_ERRO_SQL.md  CREATE_USER_SUPABASE.sh  CRIAR_ACESSO_SSH_PARA_IA.sh  CRIAR_CHAVE_SSH.sh  CRIAR_ENV_LOCAL.md  CRIAR_REPOSITORIO_GITHUB.md  DADOS_REAIS_E_SIMULADORES.md  DATABASE_POPULATION_REPORT.md  DEPLOYMENT_SUMMARY.txt  DEPLOY_AUTOMATICO_COMPLETO.sh  DEPLOY_COMPLETO.sh  DEPLOY_CONCLUIDO.md  (+280 more)
.codex/: SESSION_2025-11-06_WHATSAPP.md  SESSION_2025-11-07_RAG.md
.cursor/: mcp.json
authset/: App.tsx  README.md  constants.tsx  design-system.md  index.html  index.tsx  metadata.json  package.json  types.ts
authset-api/: .env.example  README.md  pyproject.toml
authset-api/app/: __init__.py  config.py  main.py  routes.py  schemas.py  services.py
automation/: COMANDOS_EXECUTAR.txt  INSTALL.sh  INSTALL_MANUAL.md  QUICK_START.md  (+5 more)
(+584 files in other folders)
