[project]
name = "authset-api"
version = "0.1.0"
description = "FastAPI backend for AuthSet (vault, BLE approvals, risk scoring, captcha)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "pydantic[email]>=2.9.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "numpy>=2.1.0"
]

[tool.uvicorn]
factory = true
app = "app.main:create_app"
